<resources>
    <string name="app_name">lab_8_2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="new_group">Новая группа</string>
    <string name="new_secret_chat">Новый секретный чат</string>
    <string name="new_channel">Создать канал</string>
    <string name="contacts">Контакты</string>
    <string name="favorites">Избранное</string>
    <string name="calls">Звонки</string>
    <string name="inv_friends">Пригласить друзей</string>
    <string name="settings">Настройки</string>
</resources>