<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_group"
            android:icon="@drawable/my_places"
            android:title="@string/new_group" />
        <item
            android:id="@+id/nav_new_secret_chat"
            android:icon="@drawable/secret_chat"
            android:title="@string/new_secret_chat" />
        <item
            android:id="@+id/nav_new_channel"
            android:icon="@drawable/new_channel"
            android:title="@string/new_channel" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/contacts"
                android:title="@string/contacts" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/favorites"
                android:title="@string/favorites" />
            <item
                android:id="@+id/nav_calls"
                android:icon="@drawable/calls"
                android:title="@string/calls" />
            <item
                android:id="@+id/nav_invite_friends"
                android:icon="@drawable/invite_friend"
                android:title="@string/inv_friends" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/settings"
                android:title="@string/settings" />
        </menu>
    </item>
</menu>